# golden-moment-predictor

./: .gitignore  README.md  poster_summary.json  pyproject.toml  requirements.txt  tmp.txt
config/: engine_config.yaml
db/: gmp_cache.db
design/: 01-architecture.md  02-data-model.md  03-scoring-plugins.md  04-data-flow-example.md  05-api.md  06-class-sequence.md  07-code-interface.md  08-operations.md  09-testing-config.md  10-frontend-A-immersive-map.md  10-frontend-B-split-list.md  10-frontend-C-card-flow.md  10-frontend-common.md  10-frontend.md  11-frontend-architecture-v2.md  12-poster-page.md  README.md  mg1-icon-candidates-color.html  mg1-icon-candidates.html
frontend/: .gitignore  index.html  package-lock.json  package.json  uno.config.js  vite.config.js  vitest.config.js
gmp/: __init__.py  main.py
implementation-plans/: README.md  module-01-foundation.md  module-02-astro-geo.md  module-03-cache-fetcher.md  module-04-analyzer.md  module-05-scorer-simple.md  module-06-scorer-complex.md  module-07-scheduler.md  module-08-reporter.md  module-09-api-integration.md  module-10-route.md
implementation_plan/: M01-project-init.md  M02-data-models-exceptions.md  M03-geo-utils.md  M04-astro-utils.md  M05-cache-layer.md  M06-meteo-fetcher.md  M07-config-manager.md  M08-scoring-engine.md  M09-l1-scoring-plugins.md  M09A-plugin-cloud-sea.md  M09B-plugin-frost.md  M09C-plugin-snow-tree.md  M09D-plugin-ice-icicle.md  M10-l2-scoring-plugins.md  M10A-plugin-golden-mountain.md  M10B-plugin-stargazing.md  M11-output-layer.md  M11A-output-reporters.md  M12-scheduler.md  (+63 more)
(+303 files in other folders)
